--- a/ticketingapp/tsconfig.json
+++ b/ticketingapp/tsconfig.json
@@ -5,7 +5,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
-    "noEmit": true,
+    "noEmit": false, //builde problem olursa true yap
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
